--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Food Hunt </title>
+  <title>Food Zone </title>
   <link rel="icon" href="assets/favicon_io/favicon-16x16.png">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
